[package]
name = "etestrpc"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Wei Tang <hi@that.world>"]
description = "Test RPC tool for Ethereum written in Rust"
repository = "https://github.com/ethereumproject/etestrpc"

[dependencies]
sputnikvm = "0.6"
secp256k1-plus = "0.5"
rand = "0.3.1"
sha3 = "0.6"
blockchain = "0.1"
etcommon-block = "0.2"
etcommon-trie = "0.2"
etcommon-bigint = "0.2"
etcommon-bloom = "0.2"
etcommon-rlp = "0.2"