[package]
name = "sputnikvm-dev"
version = "0.2.0"
license = "Apache-2.0"
authors = ["Wei Tang <hi@that.world>"]
description = "Test RPC tool for Ethereum written in Rust"
repository = "https://github.com/ethereumproject/etestrpc"

[[bin]]
name = "svmdev"

[dependencies]
sputnikvm = "0.10"
sputnikvm-stateful = "0.10"
clap = "2.26"
secp256k1-plus = "0.5"
rand = "0.3.1"
sha3 = "0.6"
blockchain = "0.2"
etcommon-block = "0.3"
etcommon-trie = "0.3"
etcommon-bigint = "0.2"
etcommon-bloom = "0.2"
etcommon-rlp = "0.2"
etcommon-hexutil = "0.2"
lazy_static = "0.2"
jsonrpc-core = { version = "7.1" }
jsonrpc-http-server-plus = { version = "7.1" }
jsonrpc-macros-plus = { version = "7.1" }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
log = "0.3"
env_logger = "0.4"
hyper = { version = "0.6.16", optional = true }

sputnikvm-network-classic = "0.10"
sputnikvm-network-foundation = "0.10"
sputnikvm-network-ubiq = "0.10"
sputnikvm-network-ellaism = "0.10"
sputnikvm-network-expanse = "0.10"
sputnikvm-network-musicoin = "0.10"

[features]
frontend = ["hyper"]